--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html,body {
 	height: 100%;
 	background: #000;
 }
-.title {
+/* .title {
 	width: 100%;
 	padding: 1.4rem 0;
 	background: #F5F5F5;
@@ -21,7 +21,7 @@ html,body {
 	color:#696969;
 	text-align: center;
 	font-weight: 700;
-}
+} */
 .wrapper {
 	width: 100%;
 }
