--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ html,body {
 .wrapper li img {
 	width: 100%;
 	/*height: 100%;*/
+	min-height:100%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
